# playOSkernel

./: .gitignore  8x16AsciiCharacterBitmapSet.c  CMakeLists.txt  KernelEntryPointDefinetion.h  Memory.cpp  Memory.h  PortDriver.c  PortDriver.h  README.md  VideoDriver.c  VideoDriver.h  compile_commands.json  convert_memory_descriptor.cpp  disassembly.txt  gBitmapFreePhyMemMgr.cpp  gSTResloveAPIs.c  gSTResloveAPIs.h  init.ld  kcirclebufflogMgr.cpp  kcirclebufflogMgr.h  kinit.cpp  kld.ld  kpoolmemmgr.cpp  kpoolmemmgr.h  linker .txt  linker.ld  linker_for_kernel.ld  main.cpp  os_error_definitions.h  pgtable45.h  phygpsmemmgr.cpp  phygpsmemmgr.h  test_descriptor_converter.cpp  test_kpoolmemmgr.cpp  util.cpp  utils.h
Docs/: BCB_doc.txt  MemoryModuleDocv2.txt  MemoryModuleDocv3.txt  init_protocal.txt  kernelDoc.txt  kout_tmp_buff.md  per_processor_scheduler.md  primitive_gfx_layer.md  text_console_design.md
build_utils/: ksymbols_dumper.cpp
docs/: EfiRuntimeServiceDoc.txt  MemoryModuleDoc.txt  PgsMemmgr.md  error_code_struct_doc.txt  kdbgplan.txt  kernelDoc.txt
src/: KernelEntryPointDefinetion.h  ap_init_longmode_exceptions.asm  ap_init_longmode_exceptions.txt  ap_init_pemode_exceptions.asm  ap_init_realmode_exceptions.asm  check_point.inc  checkpoint.inc  file_insert.sh  kernel_entry.asm  kinit.cpp  kout.cpp  os_error_definitions.cpp  panic.cpp  panic_processor_resources_shift.asm  time.cpp
src/Interrupts/: Interrupt_Init.cpp  Sysdef_exception_entries.asm  exceptions_handler.cpp  io_apic_mgr.cpp  lapic.cpp  local_processor_manage.cpp
src/Processor/: APs_bringup.cpp  early_bsp_resources.cpp  fixed_interrupt_resources.cpp  local_processor_manage.cpp  processor_Ks_stacks_mgr.cpp  processor_self_manage.cpp  runtime_processor_regist.asm  rwmsrs.cpp
src/acpi_subsystems/: acpimgr.cpp
src/core_hardwares/: HPET.cpp  PortDriver.cpp  VideoDriver.cpp  lapic.cpp  primitive_gop.cpp
src/drivers/: HPET.cpp  MemoryDisk.cpp  PortDriver.cpp  VideoDriver.c  VideoDriver.cpp
src/efi_about/: UefiRunTimeServices.cpp
src/firmware/: APIC_convert_functions.cpp  APIC_table_analyzer.cpp  UefiRunTimeServices.cpp  acpimgr.cpp
src/fs/: CMakeLists.txt  Makefile  fs_document.md  fs_file_about.cpp  fs_file_orgnize.md  fs_metadataorganization.md  init_fs.cpp  initfs_bits_operations.cpp  initfs_inode_content_read.cpp  initfs_inode_content_write.cpp  initfs_inode_operations.cpp  initfs_inode_resize_about.cpp  initfs_out_surfaces.cpp  initfs_pathanalyze_about.cpp
src/include/: 16x32AsciiCharacterBitmapSet.h  BlockDevice.h  DMAR.h  DoubleLinkList.h  GS_Slots_index_definitions.h  Interrupt.h  Memory.h  MemoryDisk.h  OS_utils.h  PortDriver.h  UefiRunTimeServices.h  VideoDriver.h  bitmap.h  bitmapBaseClass.h  blockdeviceids.h  cpu.h  devices_typeids.h  errno.h  gSTResloveAPIs.h  init_fs.h  init_to_kernel_info.h  kcirclebufflogMgr.h  kernelTypename.h  kintrin.h  kout.h  kpoolmemmgr.h  ktime.h  linker_symbols.h  lock.h  msr_offsets_definitions.h  os_error_definitions.h  panic.h  pgtable45.h  phygpsmemmgr.h  processor_Ks_stacks_mgr.h  processor_self_manage.h  pt_regs.h  time.h  utils.h
src/include/Interrupt_system/: ACPI_APIC.h  AP_Init_error_observing_protocol.h  Interrupt.h  Interrupt_errors.h  fixed_interrupt_vectors.h  lapic.h  loacl_processor.h
src/include/Scheduler/: per_processor_scheduler.h
src/include/abi/: boot.h
src/include/core_hardwares/: HPET.h  PortDriver.h  VideoDriver.h  lapic.h  primitive_gop.h
src/include/firmware/: ACPI_APIC.h  DMAR.h  UefiRunTimeServices.h  gSTResloveAPIs.h
src/include/memory/: AddresSpace.h  FreePagesAllocator.h  Memory.h  PagetbHeapMgr.h  all_pages_arr.h  init_memory_info.h  kpoolmemmgr.h  memmodule_err_definitions.h  memory_base.h  page_struct.h  pgtable45.h  phyaddr_accessor.h  phygpsmemmgr.h
src/include/util/: Ktemplats.h  OS_utils.h  bitmap.h  cpuid_intel.h  huge_bitmap.h  infrastrucure_location_code.h  kout.h  kptrace.h  lock.h  textConsole.h
src/include/uutils/: json_prasers.h
src/init/: basic_allocator_readme.md  heap_alloc.cpp  info_fill.cpp  init_entry.asm  init_init.cpp  kernel_load.cpp  kernel_mmu.cpp  mem_loads.cpp  pages_alloc.cpp  panic.cpp  panic_processor_resources_shift.asm
src/init/Interrupts/: Sysdef_exception_entries.asm  exceptions_handler.cpp
src/init/core_hardwares/: PortDriver.cpp  init_gop.cpp  init_gop_readme.md
src/init/include/: heap_alloc.h  initEntryPointDefinitions.h  init_linker_symbols.h  kernel_mmu.h  load_kernel.h  pages_alloc.h  panic.h  pt_regs.h
src/memory/: AddresSpace.cpp  CMakeLists.txt  FreePagesAllocator.cpp  FreePagesAllocator_BCB.cpp  FreePagesAllocator_BCB_nodesarray.cpp  FreePagesAllocator_BCB_orderlists.cpp  KspacMapMgr.cpp  KspacMapMgr_pagediretct_operate.cpp  Makefile  Memory.cpp  PagetbHeapMgr.cpp  PhyAddrAccessor.cpp  all_pages_arr.cpp  cmake_install.cmake  gBitmapFreePhyMemMgr.cpp  kpoolmemmgr.cpp  kpoolmemmgr_HCBv2.cpp  mixed_bitmap.cpp  out_surfaces.cpp  pgtable_query.cpp  phygpsmemmgr.cpp  phygpsmemmgr_availabe_search.cpp  phygpsmemmgr_buddy_about.cpp  phygpsmemmgr_freememmanage.cpp  phygpsmemmgr_freememmanage_vaddrmanage.cpp  phygpsmemmgr_init.cpp  phygpsmemmgr_new_cr3.cpp  phygpsmemmgr_pgcount_modify.cpp  phygpsmemmgr_pgs_set.cpp  phygpsmemmgr_print.cpp  phygpsmemmgr_seg_managment.cpp  phymemSegsSubMgr.cpp  phypgsmemmgr_alloc.cpp  pid_module.ld  transparent_pages.cpp
src/memory/includes/: Memory.h  kpoolmemmgr.h  phygpsmemmgr.h
src/panic/: panic.cpp
src/scheduler/: kthread_interfaces.cpp  per_processor_scheduler.cpp  yield.asm
src/tests/: BCB_test.cpp  Memory_moudle_test.cpp  bcb_replay.cpp  fs_test_main.cpp  multithread_test.cpp  operation_log_dump.cpp  test_gBitmapFreePhyMemMgr.cpp  test_kpoolmemmgr.cpp  test_memmodule.cpp  test_set_dump.cpp
src/utils/: RB_btree.cpp  bitmap.cpp  int128_div.cpp  intel_cpuid.cpp  kcirclebufflogMgr.cpp  kintrin.cpp  kout.cpp  kptrace.cpp  lock.cpp  nt.cpp  os_utils_portable_min.cpp  textConsole.cpp  time.cpp  tmp_buff.cpp  util.cpp
test_set/: phy_instance_1.json  phy_instance_2.json  vm_intance.json
user_utils/: json_configs_prase.cpp
(+17 files in other folders)
